--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 PORT="9000"
 MONGODB_URI="mongodb+srv://<username>:<password>@clusterX.xxxxx.mongodb.net/?retryWrites=true&w=majority&appName=ClusterX"
-MONGODB_DB_NAME="auth_test"
+MONGODB_DB_NAME="auth_production"
 JWT_SECRET="xxxxxxxxxxxxxxxxxxxxxx"
+NODE_ENV="production"
+TRANSACTIONS_TRACKER_FRONTEND="http://localhost:3000"
